// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsItemButton render should render in disabled state correctly 1`] = `
<PlainButton
  aria-disabled={true}
  className="bcs-VersionsItemButton bcs-is-disabled"
  data-resin-iscurrent={false}
  data-resin-target="select"
  data-testid="versions-item-button"
  getDOMRef={[Function]}
  isDisabled={true}
  type="button"
>
  Test
</PlainButton>
`;

exports[`elements/content-sidebar/versions/VersionsItemButton render should render in enabled state correctly 1`] = `
<PlainButton
  aria-disabled={false}
  className="bcs-VersionsItemButton"
  data-resin-iscurrent={false}
  data-resin-target="select"
  data-testid="versions-item-button"
  getDOMRef={[Function]}
  isDisabled={false}
  type="button"
>
  Test
</PlainButton>
`;

exports[`elements/content-sidebar/versions/VersionsItemButton render should render in enabled state correctly 2`] = `
<PlainButton
  aria-disabled={false}
  className="bcs-VersionsItemButton bcs-is-selected"
  data-resin-iscurrent={false}
  data-resin-target="select"
  data-testid="versions-item-button"
  getDOMRef={[Function]}
  isDisabled={false}
  type="button"
>
  Test
</PlainButton>
`;
